// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders collectly with children 1`] = `
<div
  className="page"
>
  <title>
    後藤のブログ
  </title>
  <link
    href="/favicon.ico"
    rel="icon"
  />
  <header>
    <h1
      className="site-title"
    >
      <a
        href="/"
      >
        後藤のブログ
      </a>
    </h1>
  </header>
  <main>
    
    <div
      className="page-main"
    >
      <div>
        <span>
          Hello World
        </span>
      </div>
    </div>
  </main>
  <footer>
    © 
    後藤のブログ
  </footer>
  <style
    jsx={true}
  >
    
        .page {
          padding: 2em 1em;
          max-width: 800px;
          margin-left: auto;
          margin-right: auto;
        }

        header {
          display: flex;
          justify-content: center;
          align-items: center;
          margin: 0 0 4em;
        }

        .site-title a {
          color: inherit;
          text-decoration: none;
        }

        footer {
          margin-top: 4em;
          padding-top: 2em;
          padding-bottom: 2em;
          display: flex;
          justify-content: center;
          align-items: center;
        }
      
  </style>
  <style
    global={true}
    jsx={true}
  >
    
        html,
        body {
          padding: 0;
          margin: 0;
          font-family: 'Noto Sans JP', -apple-system, "Segoe UI", "Helvetica Neue",
            "Hiragino Kaku Gothic ProN", メイリオ, meiryo, sans-serif;
          color: #222;
          font-size: 16px;
        }

        img,
        iframe {
          max-width: 100%;
        }

        h1, h2, h3, h4, h5, h6 {
          font-family: Montserrat, -apple-system, "Segoe UI", "Helvetica Neue",
            "Hiragino Kaku Gothic ProN", メイリオ, meiryo, sans-serif;
        }

        /* Prism のコードブロックに影響を与えず &lt;code&gt; にスタイルを追加 */
        code:not([class]) {
          font-family: monospace;
          font-size: 1rem;
          background-color: #eee;
          display: inline-block;
          padding: .2em .4em;
        }

        * {
          box-sizing: border-box;
        }
      
  </style>
</div>
`;

exports[`Layout renders collectly with title 1`] = `
<div
  className="page"
>
  <title>
    ページタイトル | 後藤のブログ
  </title>
  <link
    href="/favicon.ico"
    rel="icon"
  />
  <header>
    <h1
      className="site-title"
    >
      <a
        href="/"
      >
        後藤のブログ
      </a>
    </h1>
  </header>
  <main>
    <h1
      className="page-title"
    >
      ページタイトル
    </h1>
    <div
      className="page-main"
    />
  </main>
  <footer>
    © 
    後藤のブログ
  </footer>
  <style
    jsx={true}
  >
    
        .page {
          padding: 2em 1em;
          max-width: 800px;
          margin-left: auto;
          margin-right: auto;
        }

        header {
          display: flex;
          justify-content: center;
          align-items: center;
          margin: 0 0 4em;
        }

        .site-title a {
          color: inherit;
          text-decoration: none;
        }

        footer {
          margin-top: 4em;
          padding-top: 2em;
          padding-bottom: 2em;
          display: flex;
          justify-content: center;
          align-items: center;
        }
      
  </style>
  <style
    global={true}
    jsx={true}
  >
    
        html,
        body {
          padding: 0;
          margin: 0;
          font-family: 'Noto Sans JP', -apple-system, "Segoe UI", "Helvetica Neue",
            "Hiragino Kaku Gothic ProN", メイリオ, meiryo, sans-serif;
          color: #222;
          font-size: 16px;
        }

        img,
        iframe {
          max-width: 100%;
        }

        h1, h2, h3, h4, h5, h6 {
          font-family: Montserrat, -apple-system, "Segoe UI", "Helvetica Neue",
            "Hiragino Kaku Gothic ProN", メイリオ, meiryo, sans-serif;
        }

        /* Prism のコードブロックに影響を与えず &lt;code&gt; にスタイルを追加 */
        code:not([class]) {
          font-family: monospace;
          font-size: 1rem;
          background-color: #eee;
          display: inline-block;
          padding: .2em .4em;
        }

        * {
          box-sizing: border-box;
        }
      
  </style>
</div>
`;
